# server/openapi_server/models/__init__.py
@@ -4,4 +4,5 @@
 from __future__ import absolute_import
 # import models into model package
 from openapi_server.models.excerpt import Excerpt
+from openapi_server.models.login_info import LoginInfo
 from openapi_server.models.translated_text import TranslatedText
