# server/openapi_server/models/login_info.py
@@ -1,0 +1,94 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from openapi_server.models.base_model_ import Model
+from openapi_server import util
+
+
+class LoginInfo(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, email=None, password=None):  # noqa: E501
+        """LoginInfo - a model defined in OpenAPI
+
+        :param email: The email of this LoginInfo.  # noqa: E501
+        :type email: str
+        :param password: The password of this LoginInfo.  # noqa: E501
+        :type password: str
+        """
+        self.openapi_types = {
+            'email': str,
+            'password': str
+        }
+
+        self.attribute_map = {
+            'email': 'email',
+            'password': 'password'
+        }
+
+        self._email = email
+        self._password = password
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'LoginInfo':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The LoginInfo of this LoginInfo.  # noqa: E501
+        :rtype: LoginInfo
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def email(self):
+        """Gets the email of this LoginInfo.
+
+
+        :return: The email of this LoginInfo.
+        :rtype: str
+        """
+        return self._email
+
+    @email.setter
+    def email(self, email):
+        """Sets the email of this LoginInfo.
+
+
+        :param email: The email of this LoginInfo.
+        :type email: str
+        """
+        if email is None:
+            raise ValueError("Invalid value for `email`, must not be `None`")  # noqa: E501
+
+        self._email = email
+
+    @property
+    def password(self):
+        """Gets the password of this LoginInfo.
+
+
+        :return: The password of this LoginInfo.
+        :rtype: str
+        """
+        return self._password
+
+    @password.setter
+    def password(self, password):
+        """Sets the password of this LoginInfo.
+
+
+        :param password: The password of this LoginInfo.
+        :type password: str
+        """
+        if password is None:
+            raise ValueError("Invalid value for `password`, must not be `None`")  # noqa: E501
+
+        self._password = password
